crates/vexor-compiler/tests/golden/error/input/no_export.vx
val r = 10
val c = Circle(r)
-- no export
